# ArNe

./: .gitignore  CMakeLists.txt  LICENSE  README.md  arne_robot_control_plugins.xml  cartesian_controller_plugin.xml  gripper_controller_plugin.xml  package.xml  setup.py
LICENSES/: license.cpp  license.py
arne/: CMakeLists.txt  package.xml
arne_application/: CMakeLists.txt  package.xml
arne_application/config/: arne_autostart.md  arne_autostart.yaml
arne_application/launch/: application.launch
arne_application/scripts/: application.py
arne_application/srv/: Macro.srv
arne_motion_simulator/: CMakeLists.txt  README.md  package.xml
arne_robot_control/: CMakeLists.txt  README.md  arne_robot_control_plugins.xml  package.xml
arne_skill_pipeline/: .gitignore  CMakeLists.txt  package.xml  setup.py
arne_teleoperation/: CMakeLists.txt  README.md  package.xml  setup.py
cfg/: Control.cfg  MotionControl.cfg  aria_v2_controllers.yaml
etc/: button_cmds.yaml  setup.rviz
gazebo/: world.sdf
launch/: application.launch  aria_v2.launch  motion_simulator.launch  robot_simulator.launch  spacemouse_control.launch
msg/: State.msg
script/: compute_trajectories.py  convert_rosbags.py  learn_trajectories.py  motion_control.py  plot_trajectories.py
scripts/: application.py
src/: cartesian_controller.cpp  gripper_controller.cpp
srv/: Macro.srv
test/: compute_trajectory_test.py  learn_trajectory_test.py  play_trajectory_test.py  plot_trajectory_test.py  save_and_load_profile_test.py
urdf/: aria_v2.urdf.xacro  gripper.urdf.xacro  simulation.urdf.xacro
(+51 files in other folders)
